Add controller compatibility input mapping
